--- a/mddpharmafrontend/mddpharmafrontend/angular.json
+++ b/mddpharmafrontend/mddpharmafrontend/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "f19732ad-e319-4e83-aa23-2d7b0f24776e"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
